Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>This is the title fo the web page</title>
+    
+  </head>
+  <body>
+    <h1>Webpage Heading 1</h1>
+    <p>This si a paragraph</p>
+  </body>
+</html>
